# OpenWhiz

./: .gitignore  CMakeLists.txt
examples/: comparison_test.cpp
examples/bankChurnExample/: CMakeLists.txt  bankchurn2.csv  main.cpp
examples/cac40ConcatenateForecastExample/: CMakeLists.txt  main.cpp
examples/cac40ForecastExample/: CMakeLists.txt  cac40_3years.csv  main.cpp
examples/cac40NSForecastExample/: CMakeLists.txt  main.cpp
examples/tryusdConcatenateForecastingExample/: main.cpp  scheme.txt
include/OpenWhiz/: openwhiz.hpp
include/OpenWhiz/core/: owCuda.cu  owCuda.hpp  owNeuralNetwork.hpp  owNeuralNetwork.inl  owTensor.hpp
include/OpenWhiz/data/: owDataset.hpp
include/OpenWhiz/layers/: owCacheLayer.hpp  owConcatenateLayer.hpp  owLayer.hpp  owLinearLayer.hpp  owSequentialLayer.hpp  owSlidingWindowLayer.hpp  owTrendLayer.hpp
include/OpenWhiz/losses/: owMeanSquaredErrorLoss.hpp
include/OpenWhiz/nonlinearities/: owReLUActivation.hpp  owSigmoidActivation.hpp
include/OpenWhiz/optimizers/: owADAMOptimizer.hpp  owLBFGSOptimizer.hpp
